--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <base href="/geohunt/">
     <link rel="icon" type="image/svg+xml" href="/geohunt/satellite.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GeoHunt</title>
